sumo/tests/sumo/errors/network/edge/lane/root__edge__lane#depart__empty22/errors.sumo
Error: Attribute 'depart' in definition of lane '2_1' is empty.
Error: An unknown lane ('2_1') was tried to be set as incoming to junction '3'.
Error: An unknown lane ('2_1') should be set as a follower for lane '1_1'.
Error: Trying to close connections of an unknown lane ('2_1').
Quitting (on error).
